# rustdo

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/: config.toml  schema.json
src/: main.rs
